 - #23 impl for service : GET auth/privileges/{userId}
 - #19 impl user repository
 - #19 rename core module folder
 - #19 impl sign in with google (OAuth 2.0 Bearer Token), secure APIs
 - #16 impl for service : POST register/company/invalidate
 - #3 config springfox swagger api-docs
 - #8 clean maven structure, run test specs with each build
 - #2 groovy spock tests config
 - #1 mybatis config