@@ -2,6 +2,6 @@ package com.agh.hydra.common.model;
 
 public enum FunctionalPrivilege {
     FN_PRV_EDIT_PRIVILEGES,
-    FN_PRV_ADD_COMPANIES,
+    FN_PRV_EDIT_COMPANIES,
     FN_PRV_INVALIDATE_COMPANIES;
 }
