@@ -1,7 +1,0 @@
-package com.agh.hydra.core.auth;
-
-public class InvalidTokenException extends RuntimeException {
-  public InvalidTokenException(String message) {
-    super(message);
-  }
-}
